package gptui.ui.model.state;

import gptui.core.storagefilesystem.Answer;
import gptui.core.storagefilesystem.Interaction;
import gptui.core.storagefilesystem.InteractionId;
import gptui.core.storagefilesystem.InteractionType;
import gptui.ui.model.storage.StorageModel;
import gptui.core.storagefilesystem.Topic;
import gptui.core.storagefilesystem.TopicId;
import gptui.core.util.Mdc;
import jakarta.inject.Inject;
import jakarta.inject.Singleton;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

import java.util.List;
import java.util.Map;
import java.util.Objects;
import java.util.Optional;

import static gptui.core.storagefilesystem.AnswerState.NEW;
import static gptui.core.storagefilesystem.AnswerType.CLAUDE;
import static gptui.core.storagefilesystem.AnswerType.GCP;
import static gptui.core.storagefilesystem.AnswerType.GRAMMAR;
import static gptui.core.storagefilesystem.AnswerType.OPEN_AI;

@Singleton
class StateModelImpl implements StateModel {
    private static final Logger log = LoggerFactory.getLogger(StateModelImpl.class);
    private final StorageModel storage;
    private InteractionId currentInteractionId;
    private Topic currentTopic;
    private String editedQuestion;
    private Boolean isHistoryFilteringEnabled = false;

    @Inject
    StateModelImpl(StorageModel storage) {
        this.storage = storage;
    }

    @Override
    public synchronized boolean isEnteringNewQuestion() {
        return getCurrentInteractionOpt()
                .map(interaction -> !Objects.equals(interaction.question(), getEditedQuestion()))
                .orElse(false);
    }

    @Override
    public synchronized List<Interaction> getFullHistory() {
        return storage.readAllInteractions();
    }

    @Override
    public synchronized List<Interaction> getFilteredHistory() {
        var historyFilteringEnabled = isHistoryFilteringEnabled();
        return getFullHistory().stream()
                .filter(interaction -> !historyFilteringEnabled ||
                        Objects.equals(getCurrentTopic(), storage.getTopic(interaction.topicId())))
                .toList();
    }

    @Override
    public synchronized InteractionId getCurrentInteractionId() {
        log.trace("getCurrentInteractionId: '{}'", currentInteractionId);
        return currentInteractionId;
    }

    @Override
    public synchronized Optional<Interaction> getCurrentInteractionOpt() {
        var interaction = storage.readInteraction(currentInteractionId);
        log.trace("getCurrentInteractionOpt: '{}'", interaction.map(Interaction::toShortString));
        return interaction;
    }

    @Override
    public synchronized void setCurrentInteractionId(InteractionId currentInteractionId) {
        log.trace("setCurrentInteractionId: {}", currentInteractionId);
        this.currentInteractionId = currentInteractionId;
    }

    @Override
    public InteractionId createInteraction(InteractionType interactionType, InteractionId parentInteractionId) {
        var interactionId = storage.newInteractionId();
        Mdc.run(interactionId.id(), () -> {
            var topic = getCurrentTopic();
            var question = getEditedQuestion();
            var interaction = new Interaction(interactionId, interactionType, topic.id(), question, Map.of(
                    GRAMMAR, new Answer(GRAMMAR, "", "", "", NEW, null, null, null, null, null, null, null),
                    OPEN_AI, new Answer(OPEN_AI, "", "", "", NEW, null, null, null, null, null, null, null),
                    CLAUDE, new Answer(CLAUDE, "", "", "", NEW, null, null, null, null, null, null, null),
                    GCP, new Answer(GCP, "", "", "", NEW, null, null, null, null, null, null, null)
            ), parentInteractionId);
            storage.saveInteraction(interaction);
            setCurrentInteractionId(interactionId);
        });
        return interactionId;
    }

    @Override
    public synchronized void deleteCurrentInteraction() {
        var currentInteractionOpt = getCurrentInteractionOpt();
        if (currentInteractionOpt.isEmpty()) {
            return;
        }
        var currentInteraction = currentInteractionOpt.get();
        var newCurrentInteraction = pickNextCurrentInteractionAfterDeletion(currentInteraction);
        storage.deleteInteraction(currentInteraction.id());
        setCurrentInteractionId(newCurrentInteraction != null ? newCurrentInteraction.id() : null);
    }

    private Interaction pickNextCurrentInteractionAfterDeletion(Interaction currentInteraction) {
        var history = getFilteredHistory();
        if (history.size() > 1) {
            var neighborInteraction = adjacentItem(history, history.indexOf(currentInteraction));
            setCurrentTopic(storage.getTopic(neighborInteraction.topicId()));
            return neighborInteraction;
        }
        return switchToAdjacentTopicAndPickFirstInteraction();
    }

    private Interaction switchToAdjacentTopicAndPickFirstInteraction() {
        var oldCurrentTopic = getCurrentTopic();
        var topics = getTopics();
        if (oldCurrentTopic == null || topics.size() <= 1) {
            return null;
        }
        setCurrentTopic(adjacentItem(topics, topics.indexOf(oldCurrentTopic)));
        var newHistory = getFilteredHistory();
        return newHistory.isEmpty() ? null : newHistory.getFirst();
    }

    private static <T> T adjacentItem(List<T> list, int index) {
        return list.get(index == 0 ? index + 1 : index - 1);
    }

    @Override
    public synchronized List<Topic> getTopics() {
        return storage.getTopics();
    }

    @Override
    public Topic addTopic(String topic) {
        return storage.addTopic(topic);
    }

    @Override
    public Topic renameTopic(TopicId topicId, String newTitle) {
        return storage.renameTopic(topicId, newTitle);
    }

    @Override
    public Topic getTopic(TopicId topicId) {
        return storage.getTopic(topicId);
    }

    @Override
    public Long getInteractionCountInTopic(String topic) {
        return getFullHistory().stream()
                .filter(interaction -> Objects.equals(storage.getTopic(interaction.topicId()).title(), topic))
                .count();
    }

    @Override
    public synchronized Topic getCurrentTopic() {
        return currentTopic;
    }

    @Override
    public synchronized void setCurrentTopic(Topic currentTopic) {
        log.trace("setCurrentTopic: '{}'", currentTopic);
        this.currentTopic = currentTopic;
    }

    @Override
    public synchronized void setFirstTopicAsCurrent() {
        setCurrentTopic(!getTopics().isEmpty() ? getTopics().getFirst() : null);
    }

    @Override
    public synchronized String getEditedQuestion() {
        return editedQuestion;
    }

    @Override
    public synchronized void setEditedQuestion(String question) {
        log.trace("setEditedQuestion: '{}'", question);
        this.editedQuestion = question;
    }

    @Override
    public Boolean isHistoryFilteringEnabled() {
        log.trace("isHistoryFilteringEnabled: {}", isHistoryFilteringEnabled);
        return isHistoryFilteringEnabled;
    }

    @Override
    public void setIsHistoryFilteringEnabled(Boolean isHistoryFilteringEnabled) {
        log.trace("setIsHistoryFilteringEnabled: {}", isHistoryFilteringEnabled);
        this.isHistoryFilteringEnabled = isHistoryFilteringEnabled;
    }

    @Override
    public void chooseFirstInteractionAsCurrent() {
        if (!getFilteredHistory().isEmpty()) {
            setCurrentInteractionId(getFilteredHistory().getFirst().id());
        } else {
            setCurrentInteractionId(null);
        }
    }
}
