package gptui.ui.view;

import gptui.core.storagefilesystem.Topic;
import gptui.ui.viewmodel.topic.TopicVmController;
import jakarta.inject.Inject;
import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.CheckBox;
import javafx.scene.control.Label;
import javafx.scene.control.TextInputDialog;
import org.controlsfx.control.SearchableComboBox;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;


// FXMLLoader instantiates this controller itself, so only member injection is possible; NOSONAR
// see GptUiController for the full rationale.
@SuppressWarnings("java:S6813")
public class TopicController extends BaseController {
    private static final Logger log = LoggerFactory.getLogger(TopicController.class);
    @FXML
    private Label topicLabel;
    @FXML
    private SearchableComboBox<Topic> topicComboBox;
    @FXML
    private CheckBox filterHistoryCheckBox;
    @FXML
    private Button addButton;
    @FXML
    private Button renameButton;
    @Inject
    private TopicVmController vm;
    private final TextInputDialog newTopicDialog = new TextInputDialog();
    private final TextInputDialog renameTopicDialog = new TextInputDialog();

    @FXML
    void topicFilterHistoryCheckBoxClicked(ActionEvent ignore) {
        log.trace("topicFilterHistoryCheckBoxClicked");
        vm.onTopicFilterHistoryCheckBoxClicked();
    }

    @FXML
    void onAddButtonClicked(ActionEvent ignore) {
        log.trace("onAddButtonClicked");
        vm.onTopicFilterHistoryCheckBoxClicked();
    }

    @Override
    protected void initialize() {
        vm.properties().topicLabelText.bindBidirectional(topicLabel.textProperty());
        vm.properties().topicCbValue.bindBidirectional(topicComboBox.valueProperty());
        vm.properties().topicCbItems.bindBidirectional(topicComboBox.itemsProperty());
        vm.properties().topicCbEditor.bindBidirectional(topicComboBox.getEditor().textProperty());
        vm.properties().topicCbCellFactory.bindBidirectional(topicComboBox.cellFactoryProperty());
        vm.properties().filterHistoryCheckBoxSelected.bindBidirectional(filterHistoryCheckBox.selectedProperty());
        vm.properties().renameButtonDisable.bindBidirectional(renameButton.disableProperty());

        newTopicDialog.setTitle("Add new topic");
        newTopicDialog.setHeaderText("New topic:");
        addButton.setOnAction(_ -> {
            newTopicDialog.show();
            newTopicDialog.getEditor().clear();
            newTopicDialog.getEditor().requestFocus();
            newTopicDialog.hide();
            newTopicDialog.showAndWait().ifPresent(topic -> vm.addNewTopic(topic));
        });

        renameTopicDialog.setTitle("Rename topic");
        renameTopicDialog.setHeaderText("New topic name:");
        renameButton.setOnAction(_ -> {
            var currentTopic = topicComboBox.getValue();
            renameTopicDialog.show();
            renameTopicDialog.getEditor().setText(currentTopic != null ? currentTopic.title() : "");
            renameTopicDialog.getEditor().selectAll();
            renameTopicDialog.getEditor().requestFocus();
            renameTopicDialog.hide();
            renameTopicDialog.showAndWait().ifPresent(newTitle -> vm.renameCurrentTopic(newTitle));
        });
        topicLabel.setLabelFor(topicComboBox);
        topicComboBox.showingProperty()
                .addListener((_, _, _) -> vm.onTopicComboBoxAction());
        SearchableComboBoxShortestFirst.attach(topicComboBox);
    }
}
