@startuml
hide empty members

package view {
    class TopicPromptUiController
    together {
        class TopicPromptUiApplication
        class HistoryController
        class QuestionController
        class TopicController
        class AnswerController
    }
}

package viewmodel {
    class TopicPromptUiApplicationVM
    class AnswerVM
    class TopicPromptUiVM
    class HistoryVM
    class QuestionVM
    class TopicVM
    class ViewModelMediator
}

package model{
    class StateModel
    class ClipboardModel
    class FileModel
    class QuestionModel
    class StorageModel
}

TopicPromptUiApplication --> TopicPromptUiApplicationVM

TopicPromptUiApplicationVM --> ViewModelMediator

TopicController ---> TopicVM
QuestionController ---> QuestionVM
HistoryController ---> HistoryVM
AnswerController --> AnswerVM

TopicPromptUiController "1" --> "4" AnswerController: initialize
TopicPromptUiController --> AnswerVM
TopicPromptUiController --> TopicPromptUiVM

TopicVM <--> ViewModelMediator
QuestionVM <--> ViewModelMediator
HistoryVM <--> ViewModelMediator
TopicPromptUiVM --> ViewModelMediator
AnswerVM <--> ViewModelMediator

StateModel --> StorageModel
QuestionModel --> StorageModel

ViewModelMediator --> StateModel
ViewModelMediator --> QuestionModel
ViewModelMediator --> ClipboardModel
ViewModelMediator --> FileModel


@enduml